--- a/locales/en.json
+++ b/locales/en.json
@@ -91,6 +91,18 @@
 		{
 		  "question": "What are the limitations of the TikTok Money Calculator?",
 		  "answer": "The calculator provides estimates based on available data and industry trends. However, it cannot account for unique deals, brand preferences, or sudden changes in the platform’s algorithms."
+		},
+		{
+			"question": "How do I calculate my money on TikTok?",
+			"answer": "The amount you can earn on TikTok depends on many factors, but the TikTok Money Calculator can provide a good starting point to understand your revenue potential. Use the estimates to set sponsorship rates, plan product launches, and track your growth as a creator over time."
+		},
+		{
+			"question": "How much money is 1000 views on TikTok?",
+			"answer": "The earnings for 1,000 views on TikTok can range from $0.02 to $1.00, depending on the specific program and the creator's engagement metrics. you can also try to use the tiktok money calculator to estimate your earnings for 1,000 views."
+		},
+		{
+			"question": "How much money is 500000 views on TikTok?",
+			"answer": "Earnings for 500,000 views on TikTok can vary significantly based on several factors, including content quality, audience engagement, and regional ad markets.while TikTok's direct payout for 500,000 views is relatively low at around $15, the potential earnings can be much higher depending on various factors, including brand collaborations and the overall engagement of the content."
 		}
 	  ],
 	  "Footer": [
