--- a/locales/en.json
+++ b/locales/en.json
@@ -103,6 +103,10 @@
 		{
 			"question": "How much money is 500000 views on TikTok?",
 			"answer": "Earnings for 500,000 views on TikTok can vary significantly based on several factors, including content quality, audience engagement, and regional ad markets.while TikTok's direct payout for 500,000 views is relatively low at around $15, the potential earnings can be much higher depending on various factors, including brand collaborations and the overall engagement of the content."
+		},
+		{
+			"question": "How can I maximize my earnings from TikTok Live Gifts and video Gifts?",
+			"answer": "To maximize your earnings from TikTok Live Gifts and Video Gifts, consider the following strategies:Create Exclusive Content、Personalize Interactions、Host Giveaways and Contests、Engage with Trends and Challenges、Offer VIP Access、Maintain a Consistent Streaming Schedule、Educate Your Audience、Utilize Video Gifts.implementing these strategies, you can enhance viewer engagement, foster a supportive community, and ultimately increase your earnings from both TikTok Live Gifts and Video Gifts."
 		}
 	  ],
 	  "Footer": [
