--- a/locales/en.json
+++ b/locales/en.json
@@ -107,6 +107,10 @@
 		{
 			"question": "How can I maximize my earnings from TikTok Live Gifts and video Gifts?",
 			"answer": "To maximize your earnings from TikTok Live Gifts and Video Gifts, consider the following strategies:Create Exclusive Content、Personalize Interactions、Host Giveaways and Contests、Engage with Trends and Challenges、Offer VIP Access、Maintain a Consistent Streaming Schedule、Educate Your Audience、Utilize Video Gifts.implementing these strategies, you can enhance viewer engagement, foster a supportive community, and ultimately increase your earnings from both TikTok Live Gifts and Video Gifts."
+		},
+		{
+			"question": "How much does Charli D'Amelio's earnings in tiktok?",
+			"answer":"Using the TikTok money calculator can provide insights into the potential earnings of TikTok creators based on various metrics. For Charli D'Amelio,with over 148 million followers, one of the platform's most prominent influencers, estimates suggest she earns approximately $112,000 to $177,000."
 		}
 	  ],
 	  "Footer": [
