--- a/locales/fr.json
+++ b/locales/fr.json
@@ -3,12 +3,12 @@
 		{ "name": "Blog", "url": "" }
 	],
 	"SEO":{
-		"title": "Calculateur de revenus TikTok——Gratuit et sans inscription requise",
-		"keywords": "Calculateur de revenus TikTok, calculateur de gains TikTok, calculer les revenus sur TikTok, comment calculer l'argent sur TikTok",
+		"title": "Calculatrice d'argent TikTok——Gratuit et sans inscription requise",
+		"keywords": "Calculatrice d'argent TikTok, calculateur de gains TikTok, calculer les revenus sur TikTok, comment calculer l'argent sur TikTok",
 		"description": "Le Calculateur de revenus TikTok est un outil essentiel pour les créateurs de contenu et les influenceurs souhaitant estimer leurs gains potentiels sur la populaire plateforme de médias sociaux."
 	},
 	"Hero": {
-		"h1": "Calculateur de Revenus TikTok",
+		"h1": "Calculatrice d'argent TikTok",
 		"h2": "Le Calculateur de Revenus TikTok est un outil essentiel pour les créateurs de contenu et les influenceurs cherchant à estimer leurs gains potentiels sur la populaire plateforme de médias sociaux.",
 		"btn": "Calculer les gains",
 		"des1": "Gratuit",
@@ -16,7 +16,7 @@
 		"des3": "Précision des calculs"
 	},
 	"Faq": {
-		"h3": "FAQ du Calculateur de Revenus TikTok"
+		"h3": "FAQ Calculatrice d'argent TikTok"
 	},
 	"Content_List": [
 		{
